* Java8 compability * Basic integration tests